--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+	"dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "homepage": "https://github.com/felipewm/TCC_Car_sharing#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-google": "^0.3.0",
     "passport-google-oauth20": "^1.0.0"
