--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node index.js",
-	"dev": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/felipewm/TCC_Car_sharing#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "mongoose": "^5.2.17",
     "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-google": "^0.3.0",
